namako ni li pini a!
ken la mi ante e ni. taso tenpo ni la namako ni li pona.

sitelen pi ante namako
nasin pi kipisi kule li pali kepeken tenpo lili
nasin pini namako li pona
mi weka e pakala tan nasin pi len lawa
mi ante e sijelo kipisi e kule kipisi